<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addUserContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="300dp"
    android:background="@drawable/add_user_background"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:hint="Name"
        android:imeOptions="actionDone"
        app:boxStrokeErrorColor="#0492C2"
        app:endIconDrawable="@drawable/baseline_clear_24"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextColor="#1338BE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/baseline_search_24">

        <EditText
            android:id="@+id/searchTextInput"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/searchTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/searchTextInputLayout" />

    <TextView
        android:id="@+id/errText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/searchTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/searchTextInputLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="400dp"
        app:layout_constraintTop_toBottomOf="@id/searchTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>