<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#A9A9A9">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:text="Direct Messages"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addUserToMessages"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/baseline_add_box_24"
        android:backgroundTint="#414141"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>